# MiniJavaCompiler

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  someTestForDebug
Lexical_analysis/: MiniJavaScanner.cpp  MiniJavaScanner.h  README  lex.yy.cc  run.sh
Lexical_analysis/source/: CMakeLists.txt  CheckTypeVisitor.cpp  CheckTypeVisitor.h  DotVisitor.cpp  DotVisitor.h  Enums.h  IRTDotVisitor.cpp  IRTDotVisitor.h  MiniJavaScanner.cpp  MiniJavaScanner.h  SymbolTableVisitor.cpp  SymbolTableVisitor.h  Visitor.cpp  Visitor.h  main.cpp  parser.yy  scanner.l
Lexical_analysis/source/Ast/: BaseNode.cpp  BaseNode.h  CMakeLists.txt  Statements.h
Lexical_analysis/source/Ast/ClassDeclaration/: ClassDeclaration.cpp  ClassDeclaration.h
Lexical_analysis/source/Ast/Expression/: ExpressionBase.cpp  ExpressionBase.h  ExpressionBinOp.cpp  ExpressionBinOp.h  ExpressionBool.cpp  ExpressionBool.h  ExpressionFunctionCall.cpp  ExpressionFunctionCall.h  ExpressionGetLength.cpp  ExpressionGetLength.h  ExpressionIdentifier.cpp  ExpressionIdentifier.h  ExpressionIndex.cpp  ExpressionIndex.h  ExpressionInt.cpp  ExpressionInt.h  ExpressionNegation.cpp  ExpressionNegation.h  ExpressionNewIdentifier.cpp  ExpressionNewIdentifier.h  ExpressionNewIntArray.cpp  ExpressionNewIntArray.h  ExpressionThis.cpp  ExpressionThis.h  Expressions.h
Lexical_analysis/source/Ast/Goal/: Goal.cpp  Goal.h
Lexical_analysis/source/Ast/MainClass/: MainClass.cpp  MainClass.h
Lexical_analysis/source/Ast/MethodDeclaration/: MethodDeclaration.cpp  MethodDeclaration.h
Lexical_analysis/source/Ast/Statement/: Statements.cpp  Statements.h
Lexical_analysis/source/Ast/Type/: Type.cpp  Type.h
Lexical_analysis/source/Ast/VarDeclaration/: VarDeclaration.cpp  VarDeclaration.h
Lexical_analysis/source/IRT/: CMakeLists.txt  IRTNodeBase.cpp  IRTNodeBase.h
Lexical_analysis/source/IRT/IRTBuilderVisotor/: IRTBuilderVisitor.cpp  IRTBuilderVisitor.h
Lexical_analysis/source/IRT/IRTExp/: Arg.cpp  Arg.h  BINOP.h  BinOp.cpp  BinOp.h  Call.cpp  Call.h  Const.cpp  Const.h  ESeq.cpp  ESeq.h  IRTExp.h  IRTExpBase.cpp  IRTExpBase.h  Local.cpp  Local.h  Mem.cpp  Mem.h  Name.cpp  Name.h  Temp.cpp  Temp.h
Lexical_analysis/source/IRT/Statement/: CJump.cpp  CJump.h  IRTStatement.h  IRTStatementBase.cpp  IRTStatementBase.h  Jump.cpp  Jump.h  Label.cpp  Label.h  Move.cpp  Move.h  NOP.cpp  NOP.h  Seq.cpp  Seq.h
Lexical_analysis/source/SymbolTable/: CMakeLists.txt  SymbolTable.cpp  SymbolTable.h
Lexical_analysis/tests/: CMakeLists.txt  IRT_test.cpp  dot_visitor_test.cpp  memleak_tests.cpp  negative_tests.cpp  positive_tests.cpp  test1.in  test1.out  test_funcs.cpp  test_funcs.h  tests.cpp
Lexical_analysis/tests/negative_tests/: wrongArgs.java
task0/: CMakeLists.txt  main.cpp
task0/static_lib/: CMakeLists.txt  Forest.cpp  Forest.h
task0/tests/: CMakeLists.txt  test1.dot  test2.dot  tests.cpp
